# zoom-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  base_mcp_server.py  manifest.json  pyproject.toml  requirements.txt  setup.sh  zoom-integration.mcpb  zoom_oauth_handler.py  zoom_server.py  zoom_wrapper.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-10-zoom-mcp-v2-implementation.md
docs/superpowers/specs/: 2026-05-10-zoom-mcp-v2-design.md
scripts/: build_mcpb.sh  dev-run.sh  diag_endpoints.py  live_audit.py
server/: ai_companion.py  dispatcher.py  endpoints.py  files.py  http_client.py  log_filter.py  main.py  messages.py  oauth.py  paths.py  search.py  shared_spaces.py  summaries.py  token_store.py  tools.py  transcripts.py
server/cache/: schema.py  store.py
tests/: test_ai_companion.py  test_cache_store.py  test_dispatcher.py  test_files.py  test_http_client.py  test_log_filter.py  test_message_inline.py  test_oauth.py  test_paths.py  test_search.py  test_shared_spaces.py  test_token_store.py  test_tools.py  test_transcripts.py
utils/: __init__.py  oauth_handler.py  token_manager.py
